--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,6 +98,14 @@ code {
   border-radius: 10px;
 }
 
+.form-outline .form-control {
+  min-height: auto;
+  padding: .32rem .75rem;
+  border: 5;
+  background: transparent;
+  transition: all .2s linear;
+}
+
 body {
   background: rgb(99, 39, 120)
 }
@@ -105,14 +113,6 @@ body {
 .form-control:focus {
   box-shadow: none;
   border-color: #BA68C8
-}
-
-.x {
-  min-height: auto;
-  padding: .32rem .75rem;
-  border: 2;
-  background: transparent;
-  transition: all .2s linear
 }
 
 .back:hover {
