--- a/frontend/src/assets/homepage.css
+++ b/frontend/src/assets/homepage.css
@@ -1,10 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Reem Kufi", sans-serif !important;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 img {
   max-width: 100%;
   height: auto;
