--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,6 +16,7 @@ code {
 
 .App {
   text-align: center;
+  background-color: #1147b2;
 }
 
 .App-logo {
@@ -29,7 +32,6 @@ code {
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -131,75 +133,6 @@ body {
   border: solid 1px #BA68C8
 }
 
-.labels {
-  font-weight: bold;
-}
-
-.user-card {
-  background-color: #ffffff;
-  padding: 30px;
-  margin: 20px 0;
-  border: 1px solid #ffffff;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  height: 150px;
-}
-
-.user-card img {
-  width: 100px;
-}
-
-.form-border {
-  border-radius: 5px;
-  background-color: #ffffff;
-  padding: 20px;
-  margin: 10px 0;
-  border: 1px solid #c2c2c2;
-  border-radius: 10px;
-}
-
-.submit-button {
-  background: #44a44c;
-  color: white;
-  width: auto;
-  padding: 5px 20px;
-  display: block;
-  margin: 10px auto;
-  text-align: center;
-  border: none
-}
-
-.submit-button:hover {
-  background : #4ada56;
-  box-shadow: none;
-  border: 2px solid #000000;
-  
-}
-
-.submit-button:focus {
-  background: #682773;
-  box-shadow: none
-}
-
-.clear-button {
-  background: #b55656;
-  color: white;
-  width: auto;
-  padding: 5px 20px;
-  display: block;
-  margin: 10px auto;
-  text-align: center;
-  border: none
-}
-
-.clear-button:hover {
-  background: #ca2c2c;
-  box-shadow: none;
-  border: 2px solid #000000;
-
-}
-
-.clear-button:focus {
-  background: #682773;
-  box-shadow: none
+a {
+  text-decoration: none;
 }
